<resources>
    <string name="app_name">Proyecto_final</string>
    <string name="title_activity_principal">ActivityPrincipal</string>
    <string name="title_home">Eventos</string>
    <string name="title_dashboard">Info</string>
    <string name="title_notifications">Perfil</string>
    <string name="lbl_new_note_title">Nuevo Evento</string>
    <string name="nom">Nombre</string>
    <string name="nombre">Nombre</string>
    <string name="cat">Categoría</string>
    <string name="lugar">Lugar</string>
    <string name="fecha_hora">Fecha y hora</string>
    <string name="desc">Descripción</string>
    <string name="costo">Costo</string>
    <string name="org">Organización</string>
    <string name="registro">Registrar Usuario</string>
    <string name="ingresar">Ingresar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
