<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_note_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/nom"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/imput_new_note"/>


    <EditText
        android:id="@+id/organizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/org"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/imput_new_note"/>

    <EditText
        android:id="@+id/lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/lugar"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/imput_new_note"/>

    <EditText
        android:id="@+id/fecha_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/fecha_hora"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/imput_new_note"/>

    <EditText
        android:id="@+id/costo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/costo"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/imput_new_note"/>

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/desc"
        android:inputType="text|textMultiLine"
        android:lines="4"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/imput_new_note"/>

    <Spinner
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-10dp"/>

</LinearLayout>